Closed Bug 631772 Opened 15 years ago Closed 14 years ago

Hashtable recursion assertion with nsDocAccessible on the stack

Categories

(Core :: Disability Access APIs, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: jruderman, Assigned: surkov)

Details

(Keywords: assertion)

Attachments

(1 file)

###!!! ASSERTION: op == PL_DHASH_LOOKUP || RECURSION_LEVEL(table) == 0: 'op == PL_DHASH_LOOKUP || RECURSION_LEVEL(table) == 0', file pldhash.c, line 612 PL_DHashTableOperate [pldhash.c:613] nsTHashtable<NotificationController::nsCOMPtrHashKey<nsIContent> >::RemoveEntry [nsTHashtable.h:202] NotificationController::CancelTextUpdate [NotificationController.h:171] nsDocAccessible::UncacheChildrenInSubtree [nsDocAccessible.cpp:1948] nsDocAccessible::UpdateTreeInternal [nsDocAccessible.cpp:1833] nsDocAccessible::UpdateTree [nsDocAccessible.cpp:1785] nsDocAccessible::ContentRemoved [nsDocAccessible.cpp:1425] NotificationController::TextEnumerator [NotificationController.cpp:908] nsTHashtable<NotificationController::nsCOMPtrHashKey<nsIContent> >::s_EnumStub [nsTHashtable.h:421] PL_DHashTableEnumerate [pldhash.c:754] nsTHashtable<NotificationController::nsCOMPtrHashKey<nsIContent> >::EnumerateEntries [nsTHashtable.h:242] NotificationController::WillRefresh [NotificationController.cpp:249] nsRefreshDriver::Notify [nsRefreshDriver.cpp:256] nsTimerImpl::Fire [nsTimerImpl.cpp:428] nsTimerEvent::Run [nsTimerImpl.cpp:519] nsThread::ProcessNextEvent [nsThread.cpp:633] NS_ProcessNextEvent_P [nsThreadUtils.cpp:250] mozilla::ipc::MessagePump::Run [MessagePump.cpp:110] MessageLoop::RunInternal [message_loop.cc:220] MessageLoop::RunHandler [message_loop.cc:203] MessageLoop::Run [message_loop.cc:176] nsBaseAppShell::Run [nsBaseAppShell.cpp:198] nsAppStartup::Run [nsAppStartup.cpp:220] XRE_main [nsAppRunner.cpp:3762] main [nsBrowserApp.cpp:158] libc.so.6 + 0x15dec
CancelTextUpdate can be removed without any affect.
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #511672 - Flags: review?(bolterbugz)
Attachment #511672 - Flags: approval2.0?
Comment on attachment 511672 [details] [diff] [review] patch r+a=me yep, low risk. Let's see how it affects perf numbers.
Attachment #511672 - Flags: review?(bolterbugz)
Attachment #511672 - Flags: review+
Attachment #511672 - Flags: approval2.0?
Attachment #511672 - Flags: approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: