Bug 631772 - Hashtable recursion assertion with nsDocAccessible on the stack, r=davidb, a=davidb