accessible/src/base/NotificationController.h
@@ -163,14 +163,6 @@ public:
   }
 
   /**
-   * Cancel pending text update.
-   */
-  inline void CancelTextUpdate(nsIContent* aTextNode)
-  {
-    mTextHash.RemoveEntry(aTextNode);
-  }
-
-  /**
    * Pend accessible tree update for content insertion.
    */
   void ScheduleContentInsertion(nsAccessible* aContainer,
